k8s/service.yaml
kind: Service  
apiVersion: v1  
metadata:  
  labels:  
      app:  app-demo  
  name:  app-demo
spec:  
  ports:  
  - port: 80  
    targetPort: 8080
    name: web    
  selector:
    app:  app-demo
