k8s/deployment.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: AppNmae
spec:  
  rules:  
  - host: test.k8s.idcsec.com
    http:
      paths:  
      - path: /  
        backend:  
          serviceName:  AppNmae
          servicePort: 80 
---
kind: Service  
apiVersion: v1  
metadata:  
  labels:  
      app:  AppNmae  
  name:  AppNmae
spec:  
  ports:  
  - port: 80  
    targetPort: 8080
    name: web    
  selector:
    app:  AppNmae
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  AppNmae
  labels:
    version: v1
spec:
  replicas: 1
  strategy:  
    type: RollingUpdate  
    rollingUpdate:  
      maxSurge: 25%  
      maxUnavailable: 25%
  selector:
    matchLabels:
      app:  AppNmae
  template:
    metadata:
      labels:
        app:  AppNmae
        version: v1
    spec:
      containers:
      - name:  AppNmae
        image: IMAGE_NAME
        ports:
        - containerPort: 8080
#      imagePullSecrets:
#      - name: reg-ip-99
